# aio_traingram

./: .gitignore  Dockerfile  README.md  docker_compose.yaml  pyproject.toml  requirements.txt
project/: .env  __main__.py  config.py  env-example  main.py  set_menu.py
project/database/: base.py  bd.py  models.py  service.py
project/database/train_db/: exercise.py  exercises.py  splits.py  tips.py  training_days.py
project/handlers/: set_menu.py  user.py
project/handlers/account_handlers/: creater.py
project/handlers/advices_handlers/: advice.py
project/handlers/ai_handlers/: ai.py  api.py
project/handlers/jokes_handlers/: joke.py  parser.py
project/handlers/open_ai_handlers/: api.py
project/handlers/time_handlers/: notify_about_training.py
project/handlers/user_handlers/: create_account.py  user.py
tests/: test_base.py  test_models.py  test_user.py
